<resources>
    <string name="app_name">GestionResidence</string>
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_about">About</string>

    <!-- Menu -->
    <string name="menu_user_account">My Account</string>
    <string name="menu_my_habitat">My habitat</string>
    <string name="menu_list_habitats">List of habitats</string>
    <string name="menu_my_notifications">My notifications</string>
    <string name="menu_my_preferences">My preferences</string>
    <string name="menu_reservation">Reservation</string>

    <!-- Log In -->
    <string name="connect_page">Connexion page</string>
    <string name="password">Password</string>
    <string name="email" translatable="false">Email</string>
    <string name="user_account">UserAccount</string>
    <string name="flag">Flag</string>
    <string name="sign_account">Sign Up</string>
    <string name="login_account">Log In</string>
    <string name="lost_password">I forgot my password</string>
    <string name="bad_syntax">Bad syntax</string>
    <string name="wrong_credentials">Invalid credentials</string>
    <string name="default_client_id" translatable="false">"977541770713-adm53ou4uh2g27ocv95iua2q66u9gp0s.apps.googleusercontent.com"</string>

    <!-- Register -->
    <string name="register_new">Register an account</string>
    <string name="error_register">The server ran into an error while creating your account</string>
    <string name="succes_register">Account created successfully</string>

    <!-- Forgotten Password -->
    <string name="forgotten_password">Password forgotten</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="validate">Validate</string>
    <string name="password_message">Your password is: %s</string>
    <string name="account_inexistant">This account does not exists. Please create one.</string>

    <!-- About -->
    <string name="txt_about">This application has been developed by Clothilde Proux, Rémi Lemaire
        and Esteban Cardaillac Rodriguez and is designed for managing a residence.</string>

    <!-- Langues -->
    <string-array name="languages">
        <item>Deutsch</item>
        <item>English</item>
        <item>Español</item>
        <item>Français</item>
    </string-array>

    <string-array name="language_values">
        <item>de</item>
        <item>en</item>
        <item>es</item>
        <item>fr</item>
    </string-array>

    <string-array name="themes">
        <item>Light</item>
        <item>Dark</item>
    </string-array>

    <string-array name="theme_values">
        <item>light</item>
        <item>dark</item>
    </string-array>

    <!-- Preferences -->
    <string name="language">Language</string>
    <string name="txt_select_language">Select your preferred language</string>
    <string name="theme">Theme</string>
    <string name="txt_select_theme">Select your preferred theme</string>
    <string name="notifications">Notifications</string>
    <string name="notif_config">Enable/disable notifications</string>
    <string name="notif_title">New notification</string>
    <string name="notif_txt">You have enabled notifications.</string>
    <string name="notif_channel_name" translatable="false">Name of notification channel</string>
    <string name="notif_channel_description" translatable="false">Description of notification channel</string>

    <!-- User Account -->
    <string name="change_password">Change password</string>
    <string name="log_out">Log out</string>

    <!-- My Habitat -->
    <string name="add_new_habitat">Add a new habitat</string>
    <string name="floor">Floor</string>
    <string name="area">Area</string>
    <string name="succes_add_habitat">Habitat added successfully</string>
    <string name="error_add_habitat">An error occurred while adding your habitat</string>
    <string name="error_get_habitats">An error occurred while retrieving the habitats\' list</string>
    <string name="total_wattage_habitats">Total wattage : %s W</string>
    <string name="error_get_appliances">An error occurred while getting your appliances</string>
    <string name="error_get_info_account">An error occurred while fetching your information</string>
    <string name="add_new_appliance">Add a new appliance</string>
    <string name="appliance_name">Name:</string>
    <string name="reference">Reference:</string>
    <string name="wattage">Wattage:</string>
    <string name="succes_add_appliance">Appliance added successfully</string>
    <string name="error_add_appliance">An error occurred while adding your appliance</string>
    <string name="confirm_changes">Confirm changes</string>
    <string name="success_change_user_parameters">Modifications successful!</string>
    <string name="error_change_user_parameters">An error occurred while changing your account parameters</string>

    <!-- Habitat Adapter -->
    <string name="no_appliances">No equipment</string>

    <!-- Reservaion Fragment -->
    <string name="reserve_time_slot">Reserve a time slot</string>
    <string name="txt_confirm_reservation">Confirm reservation</string>
    <string name="txt_consumption_exceeds">Total consumption exceeds daily threshold. Do you want to continue?</string>
    <string name="txt_reservation_is_confirm">Reservation confirmed!</string>
    <string name="txt_reservation_is_cancelled">Reservation cancelled.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="success_change_coins">Your eco-coins balance has changed!</string>
    <string name="error_change_coins">There was a problem changing your eco-coins balance.</string>

    <!-- Auto added values -->
    <string name="network_error">A network error occurred</string>
    <string name="appliance_id">Appliance ID:</string>
    <string name="remove_appliance">Remove appliance</string>
    <string name="succes_remove_appliance">Appliance removed successfully</string>
    <string name="error_remove_appliance">An error occurred while removing your appliance</string>
    <string name="succes_remove_habitat">Habitat removed successfully</string>
    <string name="error_remove_habitat">An error occurred while removing your habitat</string>
    <string name="remove_habitat">Remove habitat</string>
    <string name="habitat_id">Habitat ID</string>
    <string name="error_load_img">Failed to load image</string>
    <string name="notif_overrun">Overrun alert</string>
    <string name="notif_overrun_body">Wattage exceeded for the selected slot</string>
    <string name="notif_slot">Free slot</string>
    <string name="notif_slot_body">A neighbor has freed up one of the slots you wanted</string>
    <string name="one_appliances">1 equipment</string>
    <string name="many_appliances">%1$d equipments</string>
    <string name="my_eco_coins">My eco-coins</string>
    <string name="my_eco_coins_text">You currently have %1$d eco-coins</string>
</resources>