<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_my_habitat">

    <fragment
        android:id="@+id/nav_my_habitat"
        android:name="iut.dam.gestionresidence.ui.my_habitat.MyHabitatFragment"
        android:label="@string/menu_my_habitat"
        tools:layout="@layout/fragment_my_habitat" />

    <fragment
        android:id="@+id/nav_list_habitats"
        android:name="iut.dam.gestionresidence.ui.list_habitats.ListHabitatsFragment"
        android:label="@string/menu_list_habitats"
        tools:layout="@layout/fragment_list_habitats" />

    <fragment
        android:id="@+id/nav_my_notifications"
        android:name="iut.dam.gestionresidence.ui.my_notifications.MyNotificationsFragment"
        android:label="@string/menu_my_notifications"
        tools:layout="@layout/fragment_my_notifications" />

    <fragment
        android:id="@+id/nav_my_preferences"
        android:name="iut.dam.gestionresidence.ui.my_preferences.MyPreferencesFragment"
        android:label="@string/menu_my_preferences"
        tools:layout="@layout/fragment_my_notifications" />
</navigation>