<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/profile_picture_password_forgotten"
        android:layout_width="92dp"
        android:layout_height="77dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:contentDescription="@string/user_account"
        android:src="@drawable/user_logo"
        tools:srcCompat="@drawable/user_logo" />

    <TextView
        android:id="@+id/title_password_forgotten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_picture_password_forgotten"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/forgotten_password"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/label_email_password_forgotten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/edit_text_email_password_forgotten"
        android:layout_toStartOf="@id/edit_text_email_password_forgotten"
        android:labelFor="@id/edit_text_email_password_forgotten"
        android:text="@string/email" />

    <EditText
        android:id="@+id/edit_text_email_password_forgotten"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/title_password_forgotten"
        android:layout_centerHorizontal="true"
        android:autofillHints="emailAddress"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="text|textEmailAddress|textAutoComplete"
        android:nextFocusForward="@id/edit_text_password_register" />

    <Button
        android:id="@+id/btn_password_forgotten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_text_email_password_forgotten"
        android:layout_centerHorizontal="true"
        android:text="@string/validate" />

</RelativeLayout>