<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/profile_picture_register"
        android:layout_width="92dp"
        android:layout_height="77dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:contentDescription="@string/user_account"
        android:src="@drawable/user_logo"
        tools:srcCompat="@drawable/user_logo" />

    <TextView
        android:id="@+id/title_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_picture_register"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/register_new"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/label_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/edit_text_first_name"
        android:layout_toStartOf="@id/edit_text_first_name"
        android:labelFor="@id/edit_text_first_name"
        android:text="@string/first_name" />

    <EditText
        android:id="@+id/edit_text_first_name"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/title_register"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="text|textEmailAddress|textAutoComplete"
        android:nextFocusForward="@id/edit_text_last_name" />
    <TextView
        android:id="@+id/label_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/edit_text_last_name"
        android:layout_toStartOf="@id/edit_text_last_name"
        android:labelFor="@id/edit_text_last_name"
        android:text="@string/last_name" />

    <EditText
        android:id="@+id/edit_text_last_name"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/edit_text_first_name"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="text|textEmailAddress|textAutoComplete"
        android:nextFocusForward="@id/edit_text_email_register" />
    <TextView
        android:id="@+id/label_email_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/edit_text_email_register"
        android:layout_toStartOf="@id/edit_text_email_register"
        android:labelFor="@id/edit_text_email_register"
        android:text="@string/email" />

    <EditText
        android:id="@+id/edit_text_email_register"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/edit_text_last_name"
        android:layout_centerHorizontal="true"
        android:autofillHints="emailAddress"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="text|textEmailAddress|textAutoComplete"
        android:nextFocusForward="@id/edit_text_password_register" />

    <TextView
        android:id="@+id/label_password_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/edit_text_password_register"
        android:layout_toStartOf="@id/edit_text_password_register"
        android:labelFor="@id/edit_text_password"
        android:text="@string/password" />

    <EditText
        android:id="@+id/edit_text_password_register"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/edit_text_email_register"
        android:layout_centerHorizontal="true"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:nextFocusForward="@id/btn_login_account" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_text_password_register"
        android:layout_centerHorizontal="true"
        android:text="@string/register_new" />
</RelativeLayout>