<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.list_habitats.ListHabitatsFragment">

    <ListView
        android:id="@+id/list_habitats"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_total_wattage"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/total_wattage_habitats"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/list_habitats" />

    <TextView
        android:id="@+id/title_remove_habitat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/remove_habitat"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_id_habitat_remove"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_total_wattage" />

    <TextView
        android:id="@+id/label_id_habitat_remove"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/habitat_id"
        app:layout_constraintEnd_toStartOf="@id/edit_text_id_habitat_remove"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_text_id_habitat_remove" />

    <EditText
        android:id="@+id/edit_text_id_habitat_remove"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:autofillHints="floor"
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_remove_habitat" />

    <Button
        android:id="@+id/btn_remove_habitat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remove_habitat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_id_habitat_remove" />

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_remove_habitat" />

</androidx.constraintlayout.widget.ConstraintLayout>